# better_rm

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.sh  config.json  test.db
.codewhale/: instructions.md
config/: Cargo.toml
config/src/: lib.rs
locales/: ar.yml  en.yml  es.yml  fr.yml  ja.yml  ko.yml  ru.yml  zh-CN.yml  zh-TW.yml
src/: .main.rs.swp  archive.rs  archive_and_hash.rs  args.rs  conf.rs  config.rs  constants.rs  consts.rs  db.rs  help.rs  main.rs  pack.rs  sql.rs  util.rs  utils.rs
