[package]
name = "del"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
multi_select = {path = "./multi_select"}
config = {path="./config"}
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }

# args.rs
clap = { version = "4.6.1", features = ["derive", "unicode", "cargo"] }

# check disable_list with glob
glob = "0.3"


# sql.rs
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "sqlite-bundled", "any", "derive", "macros", "json", "migrate"] }

# pach.rs
blake3 = "1.8.5"
tar = "0.4.46"
zstd = {version = "0.13.3",features = ["zstdmt"]}

