[package]
name = "better-rm"
version = "0.3.4"
edition = "2024"
description = "A safe file deletion and trash management tool with i18n support"
license = "MulanPSL-2.0"
repository = "https://github.com/ywnh1/del"
readme = "README.md"
keywords = ["trash", "delete", "safe", "rm", "trash-management"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "unicode", "cargo", "color"] }
blake3 = "1.8.5"
tar = "0.4.46"
zstd = {version = "0.13.3",features = ["zstdmt"]}
rusqlite = { version = "0.40.1", features = ["bundled", "load_extension"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
glob = "0.3.3"
dirs = "6.0.0"
timeago = "0.6.0"
tempfile = "3.27.0"
rayon = "1.12.0"
ratatui = "0.30"
crossterm = "0.28"
cliclack = "0.5.4"
rust-i18n = "4.2.1"
